--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    /* contain: content; */
     background-color: #FFFFFF;
     border: 4px solid #007E7F;
     border-radius: 2%;
