--- a/src/Components/Reservations/Reservations.css
+++ b/src/Components/Reservations/Reservations.css
@@ -1,6 +1,7 @@
-.reservations-container {
+.all-cards {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0px;
+    grid-row-gap: 0px;
   }
