--- a/src/App/App.css
+++ b/src/App/App.css
@@ -17,3 +17,11 @@
   font-family: 'Pacifico', cursive;
   font-size: 50px;
 }
+
+.resy-container {
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: .5rem;
+  grid-template-columns: repeat(1, 2rem);
+}
+
