--- a/src/Components/Reservations/Reservations.css
+++ b/src/Components/Reservations/Reservations.css
@@ -1,4 +1,4 @@
-.all-cards {
+.resy-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, 1fr);
